// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly none selected 1`] = `
<div
  class="container"
  data-testid="ability-bonus-selector"
>
  <h3
    class="header"
  >
    Select Ability Score Bonuses
  </h3>
  <div
    class="pluses"
  />
  <div
    class="selects"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly one selected 1`] = `
<div
  class="container"
  data-testid="ability-bonus-selector"
>
  <h3
    class="header"
  >
    Select Ability Score Bonuses
  </h3>
  <div
    class="pluses"
  >
    <div>
      Dexterity +1
    </div>
  </div>
  <div
    class="selects"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Dexterity
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Dexterity"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly same selected 1`] = `
<div
  class="container selected"
  data-testid="ability-bonus-selector"
>
  <h3
    class="header"
  >
    Select Ability Score Bonuses
  </h3>
  <div
    class="pluses"
  >
    Strength +2
  </div>
  <div
    class="selects"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Strength
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Strength"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Strength
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Strength"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly two selected 1`] = `
<div
  class="container selected"
  data-testid="ability-bonus-selector"
>
  <h3
    class="header"
  >
    Select Ability Score Bonuses
  </h3>
  <div
    class="pluses"
  >
    <div>
      Charisma +1
    </div>
    <div>
      Intelligence +1
    </div>
  </div>
  <div
    class="selects"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Charisma
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Charisma"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="undefined-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          Intelligence
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="Intelligence"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-con"
            role="option"
            tabindex="0"
          >
            Constitution
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            Intelligence
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-cha"
            role="option"
            tabindex="0"
          >
            Charisma
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
